# KaroSpaceBuilder

./: README.md  pyproject.toml
examples/: generate_synthetic_h5ad.py
karospace_export/: __init__.py  app.py  cli.py  export.py  schema.py
karospace_export.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
karospace_export/utils/: __init__.py  genes.py  io.py
tests/: test_smoke_export.py
