[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karospace-export"
version = "0.1.0"
description = "Static HTML exporter for AnnData (.h5ad) datasets"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "KaroSpace Builder" }
]
license = { text = "MIT" }
dependencies = [
  "anndata>=0.10",
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.10",
  "Pillow>=10.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
karospace-export = "karospace_export.cli:main"
karospace-export-app = "karospace_export.app:main"
karospace-builder = "karospace_export.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["karospace_export*"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
